vapidir = $(pkgdatadir)/vapi

xcb-proto.vapi: /usr/share/xcb/xproto.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-bigreq.vapi: /usr/share/xcb/bigreq.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-composite.vapi: /usr/share/xcb/composite.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-damage.vapi: /usr/share/xcb/damage.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-dpms.vapi: /usr/share/xcb/dpms.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-dri2.vapi: /usr/share/xcb/dri2.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-ge.vapi: /usr/share/xcb/ge.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-glx.vapi: /usr/share/xcb/glx.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-randr.vapi: /usr/share/xcb/randr.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-record.vapi: /usr/share/xcb/record.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-render.vapi: /usr/share/xcb/render.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-res.vapi: /usr/share/xcb/res.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-screensaver.vapi: /usr/share/xcb/screensaver.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-shape.vapi: /usr/share/xcb/shape.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-shm.vapi: /usr/share/xcb/shm.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-sync.vapi: /usr/share/xcb/sync.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-xc_misc.vapi: /usr/share/xcb/xc_misc.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-xevie.vapi: /usr/share/xcb/xevie.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-xf86dri.vapi: /usr/share/xcb/xf86dri.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-xf86vidmode.vapi: /usr/share/xcb/xf86vidmode.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-xfixes.vapi: /usr/share/xcb/xfixes.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-xinerama.vapi: /usr/share/xcb/xinerama.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-xinput.vapi: /usr/share/xcb/xinput.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-xkb.vapi: /usr/share/xcb/xkb.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-xprint.vapi: /usr/share/xcb/xprint.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-xselinux.vapi: /usr/share/xcb/xselinux.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-xtest.vapi: /usr/share/xcb/xtest.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-xvmc.vapi: /usr/share/xcb/xvmc.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

xcb-xv.vapi: /usr/share/xcb/xv.xml
	$(AM_V_GEN)${top_builddir}/src/xcb-vala-parser $< $@

vapi_DATA = \
	xcb.vapi \
	xcb-proto.vapi \
	xcb-bigreq.vapi \
	xcb-composite.vapi \
	xcb-damage.vapi \
	xcb-dpms.vapi \
	xcb-dri2.vapi \
	xcb-ge.vapi \
	xcb-glx.vapi \
	xcb-randr.vapi \
	xcb-record.vapi \
	xcb-render.vapi \
	xcb-res.vapi \
	xcb-screensaver.vapi \
	xcb-shape.vapi \
	xcb-shm.vapi \
	xcb-sync.vapi \
	xcb-xc_misc.vapi \
	xcb-xevie.vapi \
	xcb-xf86dri.vapi \
	xcb-xf86vidmode.vapi \
	xcb-xfixes.vapi \
	xcb-xinerama.vapi \
	xcb-xinput.vapi \
	xcb-xkb.vapi \
	xcb-xprint.vapi \
	xcb-xselinux.vapi \
	xcb-xtest.vapi \
	xcb-xvmc.vapi \
	xcb-xv.vapi

CLEANFILES = \
	xcb-proto.vapi \
	xcb-bigreq.vapi \
	xcb-composite.vapi \
	xcb-damage.vapi \
	xcb-dpms.vapi \
	xcb-dri2.vapi \
	xcb-ge.vapi \
	xcb-glx.vapi \
	xcb-randr.vapi \
	xcb-record.vapi \
	xcb-render.vapi \
	xcb-res.vapi \
	xcb-screensaver.vapi \
	xcb-shape.vapi \
	xcb-shm.vapi \
	xcb-sync.vapi \
	xcb-xc_misc.vapi \
	xcb-xevie.vapi \
	xcb-xf86dri.vapi \
	xcb-xf86vidmode.vapi \
	xcb-xfixes.vapi \
	xcb-xinerama.vapi \
	xcb-xinput.vapi \
	xcb-xkb.vapi \
	xcb-xprint.vapi \
	xcb-xselinux.vapi \
	xcb-xtest.vapi \
	xcb-xvmc.vapi \
	xcb-xv.vapi
